--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,10 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^2.2.4",
     "@chakra-ui/react": "^2.8.2",
     "@chakra-ui/theme": "^3.4.6",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
+    "@supabase/supabase-js": "^2.49.4",
     "@tanstack/react-query": "^5.17.19",
     "axios": "^1.6.5",
     "framer-motion": "^10.18.0",
