--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,7 +21,8 @@
     "framer-motion": "^10.18.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.21.3"
+    "react-router-dom": "^6.21.3",
+    "recharts": "^2.15.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
